@@ -1,0 +1,9 @@
+	"skipjfmp" is a jfm file :  0  ->   6
+		New features in pTeX p3.8.0 / JFM 2.0:
+		+ SKIP command in glue_kern
+	checksum		= 00000000
+	design size		= 10485760 2^{-20} points = 10 points
+				
+
+EXIT Code (errorlevel)		= 0
+No AMS Font
