@@ -1,0 +1,7 @@
+	"upphirakakuw6-h" is a jfm file :  0  -> 119
+	checksum		= 00000000
+	design size		= 10485760 2^{-20} points = 10 points
+				
+
+EXIT Code (errorlevel)		= 0
+No AMS Font
